@@ -9,6 +9,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Fixed bug in New Template where it was imposible to clear the category
+selector after making a selection and clicking Save.  [Sam]
+
+=item *
+
 Fixed a bug in media bulk upload - unless the media object was
 originally created with its filename for title (i.e. uploaded via
 bulk-upload or FTP) then trying to replace it with bulk upload
